Format was applied to the project

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,7 +10,7 @@ output:
 
 ## </br>
 ## Loading and preprocessing the data
-The first step is to load the file with the data source.
+The first step is to load the file containing the data source.
 ```{r echo=TRUE}
 rawds <- read.csv("activity.csv", head=TRUE, sep=",", col.names = c("steps","date","interval"))
 ```
@@ -23,7 +23,7 @@ rawds <- mutate(rawds, fdate = as.Date(date, "%Y-%m-%d"))
 
 ## </br>
 ## What is mean total number of steps taken per day?
-It is required to calculate the total of steps by day, mean and median. It is important to mention 
+It is required to calculate the total of steps by day, the mean and median. It is important to mention 
 that the NA values will be ignored.
 ```{r echo=TRUE}
 dategrp <- group_by(rawds, fdate)
@@ -31,8 +31,8 @@ stepsds <- summarise(dategrp, TotalSteps = sum(steps, na.rm = TRUE), StepsMean =
 StepsMedian = median(steps, na.rm = TRUE))
 ```
 The total of steps can be represented in a histogram:
-```{r echo=TRUE}
-hist(stepsds$TotalSteps)
+```{r echo=TRUE, fig.width=6, fig.height=6}
+hist(stepsds$TotalSteps, main="Histogram of Total Steps by day", xlab="Total Steps by day", col = "lightblue")
 ```
 
 The mean and median for the total steps in each day are:
@@ -46,12 +46,13 @@ In order to display a pattern of the activity it is necessary to pre-calculate a
 ```{r echo=TRUE}
 patterngrp <- group_by(rawds, interval)
 patternds <- summarise(patterngrp, TotalSteps = sum(steps, na.rm = TRUE), 
-IntervalMean = mean(steps, na.rm = TRUE), IntervalMedia = median(steps, na.rm = TRUE))
+	IntervalMean = mean(steps, na.rm = TRUE), IntervalMedia = median(steps, na.rm = TRUE))
 ```
 
 With the new data set, the pattern of the intervals for the steps can be visualize.
-```{r echo=TRUE}
-plot(patternds$interval, patternds$IntervalMean, type="l")
+```{r echo=TRUE, fig.width=6, fig.height=6}
+plot(patternds$interval, patternds$IntervalMean, type="l", col = "blue", main="Mean of steps by Interval", 
+	xlab="Interval", ylab="Mean of steps")
 ```
 
 ## </br>
@@ -86,8 +87,9 @@ StepsMedian = median(steps))
 ```
 
 With the calculated data, it is possible to generate the 
-```{r echo=TRUE}
-hist(stepsdsNA$TotalSteps)
+```{r echo=TRUE, fig.width=6, fig.height=6}
+hist(stepsdsNA$TotalSteps, main="Histogram of Total Steps by day with Corrected NA values",
+	xlab="Total Steps by day", col = "lightblue")
 ```
 
 The median and median for each day can be visualize as:
@@ -106,7 +108,7 @@ simds$daytype <- ifelse(weekdays(simds$fdate) %in% c("Sunday","Saturday"), "week
 After creating the categorical data, a new data frame must be created to store the averages of steps per interval.
 ```{r echo=TRUE}
 patterngrpdaytyp <- group_by(simds, daytype,interval)
-patterndsdaytyp <- summarise(patterngrpdaytyp, TotalSteps = sum(steps, na.rm = TRUE))
+patterndsdaytyp <- summarise(patterngrpdaytyp, MeanSteps = mean(steps))
 ```
 
 With the new categorical variable it is possibly to see the difference between weekdays and weekends:
@@ -114,6 +116,10 @@ With the new categorical variable it is possibly to see the difference between w
 par(mfrow = c(2,1))
 weekends <- patterndsdaytyp[patterndsdaytyp$daytype == "weekend", ]
 weekdays <- patterndsdaytyp[patterndsdaytyp$daytype == "weekday", ]
-plot(weekends$interval, weekends$TotalSteps, type="l")
-plot(weekdays$interval, weekdays$TotalSteps, type="l")
+plot(weekends$interval, weekends$MeanSteps, type="l", col = "blue", 
+	main="Mean of steps by Interval in Weekends", 
+	xlab="Interval", ylab="Mean of steps")
+plot(weekdays$interval, weekdays$MeanSteps, type="l", col = "blue", 
+	main="Mean of steps by Interval in Weekdays", 
+	xlab="Interval", ylab="Mean of steps")
 ```
