--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -55,6 +55,12 @@ plot(patternds$interval, patternds$IntervalMean, type="l", col = "blue", main="M
 	xlab="Interval", ylab="Mean of steps")
 ```
 
+There is a clear peak in the graph. It is possible to get the exact interval with the maximum average steps:
+```{r echo=TRUE}
+patternds[patternds$IntervalMean == max(patternds$IntervalMean), c(1,3)]
+```
+
+
 ## </br>
 ## Imputing missing values
 First, calculate the number of NA values in the original data set.
@@ -95,6 +101,16 @@ hist(stepsdsNA$TotalSteps, main="Histogram of Total Steps by day with Corrected 
 The median and median for each day can be visualize as:
 ```{r echo=TRUE}
 kable(stepsdsNA, digits = 2, format="html", longtable = TRUE)
+```
+
+After the corrections the distribution of the means has the same shape in the histograms. 
+However, the Total Number of Steps has a major difference. A good example is comparing
+the sum of the steps for each data set:
+```{r echo=TRUE}
+totalStepsWithoutNA <- sum(stepsdsNA$TotalSteps)
+totalStepsWithNA <- sum(stepsds$TotalSteps)
+paste("Sum of steps in original data frame:", totalStepsWithNA, sep=" ")
+paste("Sum of steps in modified data frame:", totalStepsWithoutNA, sep=" ")
 ```
 
 ## </br>
